# SamplerPrep

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.json  format_radio.py  pyproject.toml
.github/workflows/: release.yml
empty_folder/: BIRDS.raw  VINYL.raw
samplerprep/: __init__.py  __main__.py  core.py  devices.json
samplerprep/drivers/: __init__.py  addac112.py  assimil8or.py  bitbox.py  clutch.py  digitakt.py  morphagene.py  octatrack.py  queen.py  radio_music.py  rample.py  squid.py  tracker.py
