[project]
name = "format-radio"
version = "0.1.0"
description = "Prepare sound packs for Music Thing Modular Radio Music"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
format-radio = "format_radio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["format_radio.py"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
