[project]
name = "sampler-prep"
version = "0.2.0"
description = "Prepare audio sample packs for hardware samplers"
requires-python = ">=3.11"
dependencies = ["questionary"]

[project.scripts]
sampler-prep = "samplerprep.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["samplerprep"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
