[project]
name = "sampler-prep"
version = "0.4.0"
description = "Prepare audio sample packs for hardware samplers"
requires-python = ">=3.11"
dependencies = ["questionary"]
license = {text = "MIT"}
keywords = ["audio", "sampler", "eurorack", "ffmpeg", "music"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
]

[project.urls]
Homepage = "https://github.com/gbel/SamplerPrep"
Repository = "https://github.com/gbel/SamplerPrep"
Changelog = "https://github.com/gbel/SamplerPrep/blob/master/CHANGELOG.md"

[project.scripts]
sampler-prep = "samplerprep.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["samplerprep"]

[tool.hatch.build.targets.sdist]
exclude = [
    "card_folders/",
    "source_material/",
    "AP Card/",
    "dist/",
    ".venv/",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]  # pycodestyle, pyflakes, isort, pyupgrade

[dependency-groups]
dev = [
    "ruff>=0.15.6",
]
